# odb-entities

./: CMakeLists.txt  Entities.cpp  Entities.h  Entity.cpp  Entity.h  EntityField.cpp  EntityField.h  OdbCC.cpp  OdbCC.h  OdbCC_Test.cpp  OdbEntityMgr.hpp  OdbEntityMgr_Test.cpp  OdbRepository.hpp  README.md  database.hpp  entities_global.h
src/: user.hpp  user_group.hpp
